# sg3k

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  jupyter_notebook_config.py  pyproject.toml
config/: thresholds_config.yaml  visualization_config.yaml
data/jumps/2025/25-02-01/10-44-48/: RAW.UBX  SENSOR.CSV  TRACK.CSV
data/jumps/2025/25-02-01/11-31-47/: RAW.UBX  SENSOR.CSV  TRACK.CSV
data/jumps/flysight_gen1/raw_magicmike/: J1.CSV  J10.CSV  J2.CSV  J3.CSV  J4.CSV  J5.CSV  J6.CSV  J8.CSV  J9.CSV
data/jumps/gswoop/: 10-42-44.gsw  11-18-26.gsw  16-03-15.gsw  17-59-33.gsw  19-27-31.gsw  20-21-20.gsw  Klatovy.gsw
docs/: packages.md
notebooks/: sg3k_dataset.ipynb  sg3k_debrief.ipynb
src/: __init__.py
src/helpers/: __init__.py  axis_helper.py  common_plot_helper.py  debug_plot_helper.py  event_marker_helper.py  file_helper.py  map_helper.py  plot_helper.py  widget_helper.py
src/templates/: alert_styles.html  config_description.html  map_template.html  uploader_label.html  visualization_template.html
src/utils/: __init__.py  config_manager.py  error_handler.py  event_keys.py  start_point_setter.py  threshold.py  threshold_manager.py  utility.py
src/validators/: config_validator.py  config_widgets_validator.py  dataframe_validator.py  event_validator.py  file_validator.py  metric_validator.py  threshold_validator.py  token_validator.py  validator.py
src/widgets/: __init__.py  config_manager_handler.py  config_widgets.py  dataset_handler.py  visualization_widgets.py  widget_helper.py
(+442 files in other folders)
